# ai_tools

./: .bazelrc  .clang-format  .gitignore  .gitmodules  Build.pl  CONTRIBUTING.md  Dockerfile  Jenkinsfile  LICENSE.txt  Makefile  Pipfile  README.md  WORKSPACE  build.sh  environment.yml  environment_gpu.yml  mypy.ini  pull_view.py  repos.list  requirements.txt
archived/: README.md
archived/utils/lib_flexbuffers/: CMakeLists.txt  README.md
archived/utils/lib_flexbuffers/src/: flexbuffer_helpers.cpp
flatbuffers_python/: CMakeLists.txt
flatbuffers_python/src/: flatbuffer_helpers.cpp  flatbuffer_json.cpp  flexbuffer_builder.cpp
flexbuffers_python/: CMakeLists.txt
flexbuffers_python/src/: flexbuffer_builder.cpp
integration_tests/timing/: model_timer.py  pyproject.toml
python/xmos_ai_tools/xinterpreters/: CMakeLists.txt  Makefile  __init__.py  host_interpreter.py
python/xmos_ai_tools/xinterpreters/base/: base_interpreter.py
python/xmos_ai_tools/xinterpreters/device/: Makefile  aisrv_cmd.py  device_interpreter.py
python/xmos_ai_tools/xinterpreters/host/: CMakeLists.txt  host_interpreter.py
python/xmos_ai_tools/xinterpreters/src/: dll_interpreter.cc
tflite2xcore/: CMakeLists.txt  README.md  build_deploy.sh  setup.py  test_dist.sh  tflite2xcore.py  tflite2xcore_conv.py  xformer.py
tflite2xcore/src/: c_api.cpp  flexbuffer_builder.cpp  main.cpp  xcore_model.cpp  xcore_model.h
tflite2xcore/tests/test_serialization/: test_flatbuffer_io.py
tflite2xcore/tests/test_transformation_passes/: test_AddQuantizerFloatInputPass.py  test_ReplaceDeepinAnyoutFullyConnectedIntermediatePass.py
tflite2xcore/tflite2xcore/: __init__.py  analyze.py  converter.py  execution_planning.py  graph_transformer.py  logging.py  operator_codes.py  parallelization.py  pass_manager.py  tflite_visualize.py  transformation_passes.py  utils.py  version.py  xcore_device_interpreter.py  xcore_interpreter.py  xcore_model.py  xcore_schema.py  xlogging.py
tflite2xcore/tflite2xcore/_model_generation/: __init__.py  converters.py  data_factories.py  evaluators.py  model_generators.py  runners.py  utils.py
tflite2xcore/tflite2xcore/code_gen_helpers/: c_file.py  c_function.py
tflite2xcore/tflite2xcore/interpreters/: __init__.py  xcore_device.py  xcore_device_interpreter.py  xcore_interpreter.py
tflite2xcore/tflite2xcore/libs/macos/: libtflite2xcore.1.0.1.dylib  libtflite2xcore.dylib
tflite2xcore/tflite2xcore/model_generation/: __init__.py  cifar10.py  converters.py  data_factories.py  evaluators.py  interface.py  model_generators.py  runners.py  utils.py
tflite2xcore/tflite2xcore/operators/: __init__.py  maxpool.py
tflite2xcore/tflite2xcore/serialization/: README.md  __init__.py  api.py  converters.py  dict_conversion.py  flatbuffers_c.py  flatbuffers_io.py  schema_py_generated.py  xcore_schema.py
tflite2xcore/tflite2xcore/serialization/linux/: libtflite2xcore.so.1.0.1
tflite2xcore/tflite2xcore/serialization/macos/: libtflite2xcore.1.0.1.dylib
tflite2xcore/tflite2xcore/tests/: conftest.py  runtests.py
tflite2xcore/tflite2xcore/tests/test_execution_planning/: test_ReverseDepthFirstPlanner.py
tflite2xcore/tflite2xcore/tests/test_execution_plans/: test_ChannelGroupSlicePlanner.py  test_RowSlicePlanner.py  test_SlicePlanner.py
tflite2xcore/tflite2xcore/tests/test_interpreter/: test_device_interpreter.py  test_interpreter.py
tflite2xcore/tflite2xcore/tests/test_ir/: test_BuiltinOptions.py  test_serialization.py
tflite2xcore/tflite2xcore/tests/test_parallelization/: test_ChannelGroupSlicePlanner.py  test_ElementWisePlanner.py  test_SlicePlanner.py
tflite2xcore/tflite2xcore/tests/test_parallelization_plans/: test_DIDOConv2DPlanner.npz  test_DIDOConv2DPlanner.py
tflite2xcore/tflite2xcore/tests/test_serialization/: test_BuiltinOptions.py  test_flatbuffer_io.py
tflite2xcore/tflite2xcore/tests/test_transformation_passes/: .model_builders.py.swm  argmax_composite_test.py  cleanup_composite_test.py  conftest.py  fully_connected_composite_test.py  model_builders.py  test_AddArgMax16OutputPass.py  test_AddDequantizerFloatOutputPass.py  test_AddQuantizerFloatInputPass.py  test_ParallelizeDIDOPass.py  test_RemoveDanglingTensorsPass.py  test_RemoveDequantizerFloatOutputPass.py  test_RemoveQuantizerFloatInputPass.py  test_RemoveSoftmaxOutputPass.py  test_RemoveUnusedBuffersPass.py  test_ReplaceArgMax16Pass.py  test_ReplaceAveragePool2D2x2Pass.py  test_ReplaceAveragePool2DPass.py  test_ReplaceAveragePool2DPass_safe.py  test_ReplaceDeepAveragePool2DPass.py  test_ReplaceDeepMaxPool2DPass.py  test_ReplaceDeepinAnyoutFullyConnectedIntermediatePass.py  test_ReplaceDeepinAnyoutFullyConnectedOutputPass.py  (+9 more)
tflite2xcore/tflite2xcore/transformation_passes/: __init__.py  add_passes.py  argmax_passes.py  cleanup_passes.py  constant_propagation_passes.py  conv2d_passes.py  dce_passes.py  fully_connected_passes.py  lce_passes.py  lut_passes.py  minification_passes.py  op_version_passes.py  padding_passes.py  parallelization_passes.py  pooling_passes.py  quantize_dequantize_passes.py  renaming_passes.py  reshape_passes.py  scratch_memory_passes.py  tdnn_passes.py  transformation_passes.py  utils.py  warning_passes.py  word_alignment_passes.py
tflite2xcore/tflite2xcore/xcore_schema/: __init__.py  buffer.py  builtin_options.py  builtin_options.pyi  data_container.py  dict_conversion.py  flatbuffers_io.py  flexbuffers.py  ir_object.py  metadata.py  misc_enums.py  misc_enums.pyi  op_codes.py  op_codes.pyi  operator.py  operator_code.py  operator_codes.py  schema_py_generated.py  subgraph.py  tensor.py  tensor_type.py  tensor_type.pyi  xcore_model.py  xcore_schema.py
utils/python_bindings/: CMakeLists.txt  README.md  build.sh
utils/python_bindings/src/: arena_size.cpp  arena_size.h  flexbuffer_helpers.cpp  xcore_interpreter.cpp  xcore_interpreter.h  xcore_interpreter_c.cpp
utils/test_model/: CMakeLists.txt  README.md  build.sh  config.xscope  test_model.py
utils/test_model/src/: inference_engine.cc  inference_engine.h  main.c  main_cmdline.c  main_xscope.c  test_ops_resolver.cc  test_ops_resolver.h
(+3366 files in other folders)
