CMAKE_MINIMUM_REQUIRED(VERSION 3.14)

PROJECT(tflite2xcore VERSION 1.0.1)

SET(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

SET(TENSORFLOW_SOURCE_DIR "${PROJECT_SOURCE_DIR}/../../tensorflow")
SET(FLATBUFFERS_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/../third_party/flatbuffers/include")
SET(FLATBUFFERS_SOURCE_DIR "${PROJECT_SOURCE_DIR}/../third_party/flatbuffers/src")
SET(ANYOPTION_SOURCE_DIR "${PROJECT_SOURCE_DIR}/../../AnyOption")

#**********************
# Build shared library
#**********************

ADD_LIBRARY(libtflite2xcore SHARED)
SET_TARGET_PROPERTIES(libtflite2xcore PROPERTIES VERSION ${PROJECT_VERSION})
SET_TARGET_PROPERTIES(libtflite2xcore PROPERTIES PREFIX "")

TARGET_SOURCES(libtflite2xcore
  PRIVATE "${FLATBUFFERS_SOURCE_DIR}/idl_parser.cpp"
  PRIVATE "${FLATBUFFERS_SOURCE_DIR}/idl_gen_text.cpp"
  PRIVATE "${FLATBUFFERS_SOURCE_DIR}/util.cpp"
  PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src/flexbuffer_helpers.cpp"
  PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src/flatbuffer_helpers.cpp"
)

TARGET_INCLUDE_DIRECTORIES(libtflite2xcore
  PRIVATE ${TENSORFLOW_SOURCE_DIR}
  PRIVATE ${FLATBUFFERS_INCLUDE_DIR}
)

INSTALL(TARGETS libtflite2xcore DESTINATION lib)
