CMAKE_MINIMUM_REQUIRED(VERSION 3.14)

PROJECT(tflite2xcore VERSION 1.0.1)

SET(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

SET(TENSORFLOW_SOURCE_DIR "${PROJECT_SOURCE_DIR}/../../tensorflow")
SET(FLATBUFFERS_SOURCE_DIR "${PROJECT_SOURCE_DIR}/../../flatbuffers/include")
SET(ANYOPTION_SOURCE_DIR "${PROJECT_SOURCE_DIR}/../../AnyOption")

#MESSAGE(${FLATBUFFERS_SOURCE_DIR})

#**********************
# Build shared library
#**********************

ADD_LIBRARY(libtflite2xcore SHARED)
SET_TARGET_PROPERTIES(libtflite2xcore PROPERTIES VERSION ${PROJECT_VERSION})
SET_TARGET_PROPERTIES(libtflite2xcore PROPERTIES PREFIX "")

SET(libtflite2xcore_SOURCES
  "${CMAKE_CURRENT_SOURCE_DIR}/src/xcore_model.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/xcore_model.h"
)

TARGET_SOURCES(libtflite2xcore
  PRIVATE ${libtflite2xcore_SOURCES}
  PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src/c_api.cpp"
)

TARGET_INCLUDE_DIRECTORIES(libtflite2xcore
  PRIVATE ${TENSORFLOW_SOURCE_DIR}
  PRIVATE ${FLATBUFFERS_SOURCE_DIR}
)

INSTALL(TARGETS libtflite2xcore DESTINATION lib)
#INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/xcore_model.h DESTINATION include)

#**********************
# Build executable
#**********************

ADD_EXECUTABLE(tflite2xcore)

SET(tflite2xcore_SOURCES
  ${libtflite2xcore_SOURCES}
  "${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp"
)

TARGET_SOURCES(tflite2xcore
  PRIVATE "${ANYOPTION_SOURCE_DIR}/anyoption.cpp"
  PRIVATE ${tflite2xcore_SOURCES}
)

TARGET_INCLUDE_DIRECTORIES(tflite2xcore
  PRIVATE ${TENSORFLOW_SOURCE_DIR}
  PRIVATE ${FLATBUFFERS_SOURCE_DIR}
  PRIVATE ${ANYOPTION_SOURCE_DIR}
)

INSTALL(TARGETS tflite2xcore DESTINATION bin)
